webAO/client.css
body {
	font-family: "Ace Attorney", "メイリオ", Meiryo, Hiragino Kaku Gothic Pro, "ヒラギノ角ゴ Pro W3", Osaka, "MS Gothic", "ＭＳ Ｐゴシック", Tahoma, Sans;
}

img {
	image-rendering: -moz-crisp-edges;
	image-rendering: -o-crisp-edges;
	image-rendering: -webkit-optimize-contrast;
	image-rendering: crisp-edges;
	-ms-interpolation-mode: nearest-neighbor;
}

#about-logo {
	padding-top: 5px;
	height: 30%;
	image-rendering: auto;
}

.lm_content :link {
	color: #4288f2;
}

.lm_content :visited {
	color: #a65bd4;
}

@keyframes error_blink {
	0% {
		color: #fff;
	}
	50% {
		color: red;
	}
	100% {
		color: #fff;
	}
}

#client_error {
	position: absolute;
	display: flex;
	flex-direction: column;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
	justify-content: center;
	align-items: center;
	background: #a00;
	color: #fff;
	font-size: large;
	animation: error_blink 3s ease-in-out infinite;
	z-index: 100;
}

#client_loading {
	position: absolute;
	display: flex;
	flex-direction: column;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
	justify-content: center;
	align-items: center;
	background: black;
	color: lightgreen;
	font-size: large;
	z-index: 100;
}

#client_loadingtext {
	margin: 30px;
}

#client_gamewindow {
	position: relative;
	padding-bottom: 75%;
}

#client_charselect {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow-y: auto;
	justify-content: center;
	align-items: center;
	vertical-align: middle;
	margin: 0 auto;
	background: rgba(70, 70, 70, 0.5);
	z-index: 50;
}

#client_chartable {
	background: #eee;
}

#client_chartable_container {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.demothing {
	height: 60px;
	width: 60px;
	margin: 3px;
	border: 1px solid #000;
}

#client_icwrapper {
	overflow-x: hidden;
	overflow-y: auto;
	height: 100%;
}

@media (max-width: 360px) {
	#kek {
		width: fit-content;
	}
}

#client_emo {
	position: relative;
	top: 10px;
	width: 95%;
}

#client_settings {
	width: 100%;
}

.area_btn {
	width: 20%;
}

#client_court {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
}

#client_char {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_bench {
	display: none;
	position: absolute;
	height: auto;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_fg {
	display: none;
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_evi {
	opacity: 0;
	position: absolute;
	background-repeat: no-repeat;
	background-size: contain;
	height: 0%;
	width: auto;
	top: 1.5em;
}

#client_shout {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_background {
	position: absolute;
	background-color: transparent;
	width: 100%;
	height: auto;
	padding-bottom: 71%;
	top: 0;
	left: 0;
}

#client_name {
	display: none;
	height: 7%;
	border: 1px solid rgba(255, 255, 255, 0.7);
	background: rgba(73, 0, 254, 0.5);
	top: 63%;
	border-radius: 3px;
	position: absolute;
}

#client_name p {
	opacity: 2;
	color: white;
	position: relative;
	margin-left: 4px;
	margin-right: 4px;
	margin-top: auto;
}

#client_chat {
	font-size: 1em;
	display: none;
	width: 98%;
	width: calc(100% - 4px);
	margin: auto;
	height: 30%;
	border: 2px solid rgba(255, 255, 255, 0.7);
	background-color: rgba(0, 0, 0, 0.5);
	top: 70%;
	border-radius: 4px;
	position: absolute;
	word-break: keep-all;
	word-wrap: break-word;
	overflow-wrap: break-word;
	text-align: start;
	overflow: hidden;
	scroll-behavior: smooth;
}

#client_chat p {
	margin: 4px;
	color: white;
}

#client_inputbox {
	font-size: 21px;
	padding: 2px 10px;
}

.long {
	width: 100%;
	background-color: #ddd;
	border: 1px solid #555;
	border-style: solid;
	box-sizing: border-box;
	margin: auto;
}

#client_chatlog {
	top: 0;
	right: 0;
	flex: 1;
}

#client_log {
	position: relative;
	height: 100%;
	color: #fff;
	word-break: keep-all;
	word-wrap: break-word;
	overflow-wrap: break-word;
	overflow-y: auto;
	font-size: medium;
	background-color: #242424;
	text-align: start;
	line-height: .85em;
}

#client_log>p {
	line-height: 1.1em;
}

#iclog_name {
	font-weight: bold;
	padding-right: .35em;
}

#iclog_time {
	float: right;
	padding-right: .5em;
	color: #dbdbdb;
}

#client_ooclog {
	position: relative;
	background-color: #242424;
	color: #fff;
	font-family: "Source Code Pro", "Consolas", monospace;
	font-size: small;
	overflow-wrap: break-word;
	overflow-y: auto;
	text-rendering: optimizelegibility;
	resize: none;
	flex: 1 1 auto;
	border: none;
}

#client_musiclist {
	width: 99%;
	height: 100%;
	background-color: #222;
	color: #fff;
}

#client_bars {
	position: relative;
	text-align: center;
	display: flex;
	display: -webkit-flex;
}

#client_testimony {
	display: block;
	position: absolute;
	width: 100%;
	height: auto;
}

#evi_icon {
	background-image: url('misc/empty.png');
	background-repeat: no-repeat;
	background-size: contain;
}

#evi_options {
	display: inline-block;
	padding-left: 5px;
}

#evi_options label {
	display: inline-block;
	width: 3em;
}

#evi_desc {
	flex: 1 auto;
}

#bg_preview {
	max-width: 150px;
	max-height: 112px;
	width: 100%;
	height: 100%;
	border-style: double;
	border-radius: 7px;
	border-color: #fff;
	border-width: 3px;
}

.slider {
	padding-right: 4px;
	width: 80%;
	align-self: center;
	margin-left: auto;
	margin-right: auto;
}

#client_defense_hp {
	text-align: left;
}

#client_defense_hp>.health-bar {
	background-color: #169de0;
}

#client_prosecutor_hp {
	text-align: right;
}

#client_prosecutor_hp>.health-bar {
	background-color: #e01f5f;
}

.health-box {
	background-color: #555;
	height: 20px;
	width: 50%;
	margin: 0 auto;
	border: solid 2px #aaa;
	border-radius: 5px;
	box-sizing: border-box;
	display: block;
}

.health-bar {
	width: 100%;
	height: 100%;
	border-radius: 3px;
	bottom: 0;
	position: relative;
	display: inline-block;
}

.client_button {
	padding: 1px;
	cursor: pointer;
}

.client_button.hover_button.inactive {
	display: none;
}

.client_button.hover_button:hover {
	margin: -2px;
	border-radius: 5px;
	border-style: dashed;
	border-width: 2px;
	border-color: #FFD081;
}

.client_button.hover_button:hover {
	margin: -2px;
	border-radius: 5px;
	border-style: dashed;
	border-width: 2px;
	border-color: #FFD081;
}

.dark {
	filter: brightness(50%);
}

.hrtext {
	overflow: hidden;
	text-align: center;
	font-size: small;
	color: #c6c6c6;
}

.hrtext:before,
.hrtext:after {
	background-color: #c6c6c6;
	content: "";
	display: inline-block;
	height: 1px;
	position: relative;
	vertical-align: middle;
	width: 50%;
}

.hrtext:before {
	right: 0.5em;
	margin-left: -50%;
}

.hrtext:after {
	left: 0.5em;
	margin-right: -50%;
}

#client_menu {
	overflow-y: auto;
	height: 100%;
}

.menu_content {
	margin: 15px 15px;
	display: none;
}

.menu_content.active {
	display: block;
}

.menu_icon {
	cursor: pointer;
	line-height: 15px;
	display: inline-table;
	margin: 10px 15px;
	opacity: 1;
}

.menu_icon.active {
	opacity: 0.25;
}

.menu_icon:hover {
	color: #FFD081;
}

.material-icons.em-3 {
	font-size: 3em;
}

.material-icons.em-1-5 {
	font-size: 1.5em;
}

.location-box {
	border-style: solid;
	background-color: #7B2900;
	min-width: 120px;
	margin: 5px;
	display: inline-block;
	padding: 6px;
	border-radius: 5px;
	border-color: white;
	border-width: 1px;
	cursor: pointer;
}

.location-box:hover {
	border-color: #FFD081;
}

